# showcase

./: .gitignore  README.md  pyproject.toml
showcase/: flow.py  geometry.py  graph.py  network.py  parameters.py  raster.py
showcase_solution/: analysis.ipynb
showcase_solution/result/: flux.tif
tests/: test_flow.py  test_geometry.py  test_graph.py  test_network.py
whitebox_solution/: analysis.ipynb
