[tool.poetry]
name = "showcase"
version = "0.1.0"
description = ""
authors = ["ts"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
whitebox = "^2.3.1"
rasterio = "^1.3.6"
numpy = "^1.24.3"
geos = "^0.2.3"
geoviews = "^1.9.6"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
