[tool.poetry]
name = "showcase"
version = "0.1.0"
description = ""
authors = ["ts"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
networkx = "^3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
pytest = "^7.3.1"
black = "^23.3.0"
whitebox = "^2.3.1"
rasterio = "^1.3.6"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
